# library

./: .flake8  .gitignore  Dockerfile  Dockerfile-dev  README.md  docker-compose.yml  pyproject.toml
commands/: run_celery.sh  run_flower.sh  start_server.sh
src/: .coverage
src/books/: dto.py  exceptions.py  interactors.py  interfaces.py  models.py  repositories.py  serializers.py  services.py  tests.py  urls.py  views.py
src/books/migrations/: 0001_initial.py  0002_alter_book_last_used.py
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/core/: admin.py  base_api.py  celery.py  containers.py  fixtures_for_tests.py  interfaces.py  repositories.py  services.py  tasks.py
src/reading_sessions/: apps.py  dto.py  exceptions.py  interactors.py  interfaces.py  models.py  repositories.py  serializers.py  services.py  tests.py  urls.py  views.py
src/reading_sessions/migrations/: 0001_initial.py  0002_initial.py  0003_alter_session_book_alter_session_visitor.py
src/reading_statistics/: admin.py  apps.py  dto.py  exceptions.py  interactors.py  interfaces.py  models.py  repositories.py  serializers.py  services.py  tests.py  urls.py  views.py
src/reading_statistics/migrations/: 0001_initial.py  0002_initial.py
src/visitors/: admin.py  apps.py  dto.py  exceptions.py  interactors.py  interfaces.py  models.py  repositories.py  serializers.py  services.py  tests.py  urls.py  views.py
src/visitors/migrations/: 0001_initial.py  0002_readingstatistic.py  0002_rename_total_reading_time_visitor_total_reading_time_for_the_last_week_and_more.py  (+4 more)
